# neobot

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHASE_0.7_COMPLETION.md  README.md  SECURITY.md  download.html
.github/workflows/: build-windows-installer.yml  ci.yml  neobot-agent-test.yml  release.yml
docs/: development-guide-phases-0-3.md  neobot-integration.md  neobot-kali-linux-setup-guide.md
frontend/src/routes/: +page.svelte
frontend/src/routes/download/: +page.svelte
frontend/src/routes/vm-setup/: +page.svelte
installer/: NeoBot-Professional-Setup.iss  NeoBot-Windows-Kali-VM-Setup.ps1  NeoBot-Windows-Professional-Setup.bat
kali-preconfig/kali-agent/: neobot_agent.py  neobot_prompt.txt  tool_executor.py
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/commands/: macos.rs  mod.rs  neobot_agent.rs  provision.rs  provisioning.rs  terminal.rs  windows.rs
src-tauri/src/core/: terminal.rs
