[package]
name = "neobot"
version = "0.1.0"
edition = "2021"

[lib]
name = "neobot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]

[dependencies]
tauri = { version = "2", features = ["devtools", "process", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
indicatif = "0.17"  # For future progress bars

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
